--- a/frontend/src/app/features/homepage/homepage.component.html
+++ b/frontend/src/app/features/homepage/homepage.component.html
@@ -7,18 +7,18 @@
     </div>
   </section>
 
-  <section class="featured-apartments">
-    <h2>Featured Apartments</h2>
-    <div class="apartments-grid">
-      <div class="apartment-card" *ngFor="let apartment of featuredApartments">
-        <img [src]="apartment.image" alt="Apartment Image">
-        <h3>{{ apartment.name }}</h3>
-        <p>{{ apartment.location }}</p>
-        <p>Price: {{ apartment.price | currency:'USD' }}</p>
-        <button (click)="viewDetails(apartment.id)">View Details</button>
-      </div>
-    </div>
-  </section>
+<!--  <section class="featured-apartments">-->
+<!--    <h2>Featured Apartments</h2>-->
+<!--    <div class="apartments-grid">-->
+<!--      <div class="apartment-card" *ngFor="let apartment of featuredApartments">-->
+<!--        <img [src]="apartment.image" alt="Apartment Image">-->
+<!--        <h3>{{ apartment.name }}</h3>-->
+<!--        <p>{{ apartment.location }}</p>-->
+<!--        <p>Price: {{ apartment.price | currency:'USD' }}</p>-->
+<!--        <button (click)="viewDetails(apartment.id)">View Details</button>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </section>-->
 
   <section class="about">
     <h2>Why Choose Us?</h2>
