--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,6 +5,7 @@
 
 <div *ngIf="!userRole || userRole === ''" class="video-background">
   <video autoplay loop playsinline>
+    <source src="/video/final.mov" type="video/mp4">
 <!--    <source src="assets/video/final.mov" type="video/mp4">-->
     Your browser does not support the video tag.
   </video>
