bug: user role fixed

--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -19,3 +19,6 @@
   <a href="/profile"> Reservation</a>
 <!--  <a href="#" (click)="logout()">Logout</a>-->
 </div>
+
+<div *ngIf="userRole === 'ADMINISTRATOR'" class="sidenav">
+</div>
