--- a/frontend/src/app/features/user-profile/user-profile.component.css
+++ b/frontend/src/app/features/user-profile/user-profile.component.css
@@ -2,9 +2,11 @@
   max-width: 550px;
   margin: 2% auto;
   padding: 20px;
-  border: 1px solid #ddd;
+  /*border: 1px solid #ddd;*/
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  /*box-shadow: 3px 6px 10px rgba(0, 0, 0, 0.1);*/
+
 }
 
 .profile-container h1 {
