--- a/frontend/src/app/features/user-profile/user-profile.component.html
+++ b/frontend/src/app/features/user-profile/user-profile.component.html
@@ -1,22 +1,22 @@
 <div *ngIf="user" class="profile-container">
 
-  <div class="image-container">
+  <div  class="image-container">
     <img [src]="user.profilePic" alt="Profilna slika" class="profile-image" />
   </div>
 
   <div class="form-group">
     <label for="firstname">Name:</label>
-    <input id="firstname" [readonly]="!isEditing" type="text" />
+    <input id="firstname" [(ngModel)]="user.firstname" [readonly]="!isEditing" type="text" />
   </div>
 
   <div class="form-group">
     <label for="lastname">Last Name:</label>
-    <input id="lastname" [readonly]="!isEditing" type="text" />
+    <input id="lastname" [(ngModel)]="user.lastname" [readonly]="!isEditing" type="text" />
   </div>
 
   <div class="form-group">
     <label for="email">Email:</label>
-    <input id="email" readonly type="email" />
+    <input id="email" [(ngModel)]="user.email" readonly type="email" />
   </div>
 
   <div class="form-group">
