--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -7,18 +7,33 @@
 
 
 <div *ngIf="userRole === 'GUEST'" class="sidenav">
-  <a href="/profile"> Profile </a>
-  <a href="/profile"> Reservation </a>
+  <a (click)="toggleProfileMenu()"> Profile </a>
+
+  <div *ngIf="isProfileMenuOpen" class="dropdown-menu">
+    <div class="hover">
+    <a href="/profile">Edit Profile</a>
+    </div>
+    <a href="/change-password">Change Password</a>
+  </div>
+
+  <a href="/guest-reservation"> Reservation </a>
   <a href="#" (click)="logout()">Logout</a>
 </div>
 
 <div *ngIf="userRole === 'HOST'" class="sidenav">
-  <a href="/profile"> Profile </a>
-  <a href="/profile"> Add Apartment </a>
-  <a href="/profile"> Edit Apartment </a>
-  <a href="/profile"> Reservation</a>
-<!--  <a href="#" (click)="logout()">Logout</a>-->
+  <a (click)="toggleProfileMenu()"> Profile </a>
+
+  <div *ngIf="isProfileMenuOpen" class="dropdown-menu">
+    <a href="/edit-profile">Edit Profile</a>
+    <a href="/change-password">Change Password</a>
+  </div>
+
+  <a href="/add-apartment"> Add Apartment </a>
+  <a href="/edit-apartment"> Edit Apartment </a>
+  <a href="/reservation"> Reservation</a>
+  <a href="#" (click)="logout()">Logout</a>
 </div>
+
 
 <div *ngIf="userRole === 'ADMINISTRATOR'" class="sidenav">
 </div>
