--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -20,9 +20,22 @@
 </div>
 
 <div *ngIf="userRole === 'HOST'" class="sidenav">
-  <a routerLink="/profile">Profile</a>
+  <a (click)="toggleProfileMenu()"> Profile </a>
+
+  <div *ngIf="isProfileMenuOpen" class="dropdown-menu">
+    <div class="hover">
+      <a routerLink="/profile">Edit Profile</a>
+    </div>
+    <a routerLink="/change-password">Change Password</a>
+  </div>
+
   <a routerLink="/profile">Add Apartment</a>
   <a routerLink="/profile">Edit Apartment</a>
   <a routerLink="/profile">Reservation</a>
+  <a href="#" (click)="logout()">Logout</a>
+</div>
+
+
+<div *ngIf="userRole === 'ADMINISTRATOR'" class="sidenav">
   <a href="#" (click)="logout()">Logout</a>
 </div>
