--- a/frontend/src/app/features/change-password/change-password.component.html
+++ b/frontend/src/app/features/change-password/change-password.component.html
@@ -1,1 +1,55 @@
-<p>change-password works!</p>
+<div *ngIf="user" class="password-change-container">
+
+  <h2>Change Password</h2>
+
+  <form (ngSubmit)="changePassword()">
+    <div class="form-group">
+      <label for="oldPassword">Old Password:</label>
+      <input
+        type="password"
+        id="oldPassword"
+        [(ngModel)]="oldPassword"
+        name="oldPassword"
+        required
+        placeholder="Enter old password"
+        class="form-control"
+      />
+    </div>
+
+    <div class="form-group">
+      <label for="newPassword">New Password:</label>
+      <input
+        type="password"
+        id="newPassword"
+        [(ngModel)]="newPassword"
+        name="newPassword"
+        required
+        placeholder="Enter new password"
+        class="form-control"
+      />
+    </div>
+
+    <div class="form-group">
+      <label for="confirmPassword">Confirm New Password:</label>
+      <input
+        type="password"
+        id="confirmPassword"
+        [(ngModel)]="confirmPassword"
+        name="confirmPassword"
+        required
+        placeholder="Confirm new password"
+        class="form-control"
+      />
+    </div>
+
+    <button class="btn btn-primary" (click)="changePassword()">Save</button>
+
+    <div *ngIf="errorMessage" class="error-message">
+      {{ errorMessage }}
+    </div>
+  </form>
+</div>
+
+<div *ngIf="!user" class="password-change-container">
+  <p>You are not logged in.</p>
+</div>
