--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -10,12 +10,12 @@
 
   <div *ngIf="isProfileMenuOpen" class="dropdown-menu">
     <div class="hover">
-      <a routerLink="/profile">Edit Profile</a>
+      <a routerLink="/profile" (click)="closeMenu()">Edit Profile</a>
     </div>
-    <a routerLink="/change-password">Change Password</a>
+    <a routerLink="/change-password" (click)="closeMenu()">Change Password</a>
   </div>
 
-  <a routerLink="/guest-reservation">Reservation</a>
+  <a routerLink="/guest-reservation" (click)="closeMenu()">Reservation</a>
   <a href="#" (click)="logout()">Logout</a>
 </div>
 
@@ -24,14 +24,14 @@
 
   <div *ngIf="isProfileMenuOpen" class="dropdown-menu">
     <div class="hover">
-      <a routerLink="/profile">Edit Profile</a>
+      <a routerLink="/profile" (click)="closeMenu()">Edit Profile</a>
     </div>
-    <a routerLink="/change-password">Change Password</a>
+    <a routerLink="/change-password" (click)="closeMenu()">Change Password</a>
   </div>
 
-  <a routerLink="/profile">Add Apartment</a>
-  <a routerLink="/profile">Edit Apartment</a>
-  <a routerLink="/profile">Reservation</a>
+  <a routerLink="/profile" (click)="closeMenu()">Add Apartment</a>
+  <a routerLink="/profile" (click)="closeMenu()">Edit Apartment</a>
+  <a routerLink="/profile" (click)="closeMenu()">Reservation</a>
   <a href="#" (click)="logout()">Logout</a>
 </div>
 
