--- a/frontend/src/app/features/change-password/change-password.component.html
+++ b/frontend/src/app/features/change-password/change-password.component.html
@@ -2,6 +2,7 @@
 
   <h2>Change Password</h2>
 
+  <!-- Koristi ngSubmit za submit forme -->
   <form (ngSubmit)="changePassword()">
     <div class="form-group">
       <label for="oldPassword">Old Password:</label>
@@ -42,7 +43,7 @@
       />
     </div>
 
-    <button class="btn btn-primary" (click)="changePassword()">Save</button>
+    <button class="btn btn-primary" type="submit">Save</button> <!-- Use type="submit" instead of (click) -->
 
     <div *ngIf="errorMessage" class="error-message">
       {{ errorMessage }}
