komponente za add i edit apartment

--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -29,8 +29,8 @@
     <a routerLink="/change-password" (click)="closeMenu()">Change Password</a>
   </div>
 
-  <a routerLink="/profile" (click)="closeMenu()">Add Apartment</a>
-  <a routerLink="/profile" (click)="closeMenu()">Edit Apartment</a>
+  <a routerLink="/add-apartment" (click)="closeMenu()">Add Apartment</a>
+  <a routerLink="/edit-apartment" (click)="closeMenu()">Edit Apartment</a>
   <a routerLink="/profile" (click)="closeMenu()">Reservation</a>
   <a href="#" (click)="logout()">Logout</a>
 </div>
