search kostur FRONT

--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!userRole || userRole === ''" class="sidenav">
   <a routerLink="">Home</a>
-  <a routerLink="">Search</a>
+  <a routerLink="/search-apartment">Search</a>
   <a routerLink="/login">Login</a>
 </div>
 
