search apartment FRONT

--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -30,7 +30,7 @@
   </div>
 
   <a routerLink="/add-apartment" (click)="closeMenu()">Add Apartment</a>
-  <a routerLink="/edit-apartment" (click)="closeMenu()">Edit Apartment</a>
+  <a routerLink="/edit-apartment-view" (click)="closeMenu()">Edit Apartment</a>
   <a routerLink="/profile" (click)="closeMenu()">Reservation</a>
   <a href="#" (click)="logout()">Logout</a>
 </div>
