finalni FRONTEND za search

--- a/frontend/src/app/shared/search-accommodations/search-accommodations.component.css
+++ b/frontend/src/app/shared/search-accommodations/search-accommodations.component.css
@@ -55,6 +55,15 @@
   display: flex;
   align-items: center;
   gap: 20px;
+  justify-content: space-between;
+}
+
+.card.image-right .text {
+  order: 1;
+}
+
+.card.image-left .text {
+  order: 2;
 }
 
 .card.image-right .image {
@@ -65,20 +74,29 @@
   order: 1;
 }
 
+.card.image-right .image img {
+  border-radius: 25px 0 0 25px;
+}
+
+.card.image-left .image img {
+  border-radius: 0 25px 25px 0;
+}
+
+
 .image {
-  flex: 1;
+  flex: 1.2;
 }
 
 .image img {
   width: 100%;
-  max-width: 500px;
-  height: auto;
-  border-radius: 10px;
+  height: 450px;
+  /*max-width: 500px;*/
   object-fit: cover;
+
 }
 
 .text {
-  flex: 1;
+  flex: 0.8;
 }
 
 .text h2 {
