--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -29,8 +29,15 @@
     <a routerLink="/change-password" (click)="closeMenu()">Change Password</a>
   </div>
 
-  <a routerLink="/add-apartment" (click)="closeMenu()">Add Apartment</a>
-  <a routerLink="/edit-apartment-view" (click)="closeMenu()">Edit Apartment</a>
+  <a (click)="toggleProfileMenu()"> Apartments </a>
+
+  <div *ngIf="isProfileMenuOpen" class="dropdown-menu">
+    <div class="hover">
+      <a routerLink="/add-apartment" (click)="closeMenu()">Add Apartment</a>
+    </div>
+    <a routerLink="/edit-apartment-view" (click)="closeMenu()">Edit Apartment</a>
+  </div>
+
   <a routerLink="/profile" (click)="closeMenu()">Reservation</a>
   <a href="#" (click)="logout()">Logout</a>
 </div>
