--- a/frontend/src/app/features/apartment-view/map-section/map-section.component.html
+++ b/frontend/src/app/features/apartment-view/map-section/map-section.component.html
@@ -1,7 +1,2 @@
-<div class="map">
-<!--<div id="map" leaflet [leafletOptions]="options" [leafletLayers]="layers"></div>-->
-  <p>Couldn't connect to the map</p>
-  <button class="retry-button">Retry</button>
-</div>
-
+<div id="map"></div>
 
