--- a/frontend/src/app/features/apartment-view/detailed-view/detailed-view.component.html
+++ b/frontend/src/app/features/apartment-view/detailed-view/detailed-view.component.html
@@ -7,7 +7,11 @@
     <app-apartment-info></app-apartment-info>
   </div>
   <div class="right-section">
-    <app-amenities-info></app-amenities-info>
-    <app-map-section></app-map-section>
+    <div class="map-container">
+      <app-map-section></app-map-section>
+    </div>
+    <div class="amenities-info">
+      <app-amenities-info></app-amenities-info>
+    </div>
   </div>
 </div>
