--- a/frontend/src/app/shared/search-accommodations/search-accommodations.component.html
+++ b/frontend/src/app/shared/search-accommodations/search-accommodations.component.html
@@ -31,7 +31,7 @@
         </div>
 
         <div *ngIf="userRole === 'GUEST'">
-          <button class="view-details" (click)="detailedViewApartment()">View Apartment</button>
+          <button class="view-details" (click)="detailedViewApartment(accommodation)">View Apartment</button>
         </div>
 
       </div>
