--- a/frontend/src/app/features/apartment-view/host-info/host-info.component.css
+++ b/frontend/src/app/features/apartment-view/host-info/host-info.component.css
@@ -13,7 +13,7 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .contact-button {
@@ -55,3 +55,49 @@
 .phone-toggle:hover {
   text-decoration: underline;
 }
+
+
+.analytics-area {
+  margin-top: 20px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.occupancy {
+  font-size: 14px;
+  margin-bottom: 12px;
+}
+
+.price-history {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.price-bars {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: flex-end; /* Poravnanje na dno */
+}
+
+.price-bar {
+  display: flex;
+  flex-direction: column; /* Omogućava da bar i godina budu vertikalno poređani */
+  align-items: center;
+}
+
+.bar {
+  width: 20px;
+  background-color: #007bff;
+  display: block;
+  border-radius: 3px 3px 0 0;
+}
+
+.year {
+  margin-top: 5px;
+  font-size: 12px;
+  color: #333;
+}
+
