--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,12 +2,13 @@
 
 <router-outlet></router-outlet>
 
-<div *ngIf="!userRole || userRole === ''" class="video-background">
+<div *ngIf="isVideoVisible && (!userRole || userRole === '')" class="video-background">
   <video autoplay loop playsinline>
-<!--    <source src="/video/final.mov" type="video/mp4">-->
+    <source src="/video/final.mov" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </div>
+
 
 <div *ngIf="userRole === 'GUEST'" class="guest-div">
 
