uredjen stil za slike

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 <div *ngIf="isVideoVisible && (!userRole || userRole === '')" class="video-background">
   <video autoplay loop playsinline>
-    <source src="/video/final.mov" type="video/mp4">
+<!--    <source src="/video/final.mov" type="video/mp4">-->
     Your browser does not support the video tag.
   </video>
 </div>
