--- a/frontend/src/app/features/apartment/apartment-view/host-info/host-info.component.css
+++ b/frontend/src/app/features/apartment/apartment-view/host-info/host-info.component.css
@@ -38,7 +38,8 @@
   display: flex;
   align-items: center;
   margin: 10px 0;
-  background-color: #6c757d;
+  /*background-color: #6c757d;*/
+  border: 1px solid #ccc;
   padding: 10px 15px;
   border-radius: 5px;
 }
