--- a/frontend/src/app/features/apartment/apartment-view/apartment-images/apartment-images.component.html
+++ b/frontend/src/app/features/apartment/apartment-view/apartment-images/apartment-images.component.html
@@ -1,8 +1,10 @@
 <div class="image-gallery">
-  <img src="mpics/apartment/a4.jpg" alt="Property" class="main-image">
-  <div class="thumbnail-row">
-    <img src="pics/apartment/a1.jpg" alt="Thumbnail 1">
-    <img src="pics/apartment/a2.jpg" alt="Thumbnail 2">
-    <img src="pics/apartment/a3.jpg" alt="Thumbnail 3">
+  <div class="thumbnail-column">
+    <img src="pics/apartment/a1.jpg" alt="Thumbnail 1" class="thumbnail">
+    <img src="pics/apartment/a2.jpg" alt="Thumbnail 2" class="thumbnail">
+    <img src="pics/apartment/a3.jpg" alt="Thumbnail 3" class="thumbnail">
+  </div>
+  <div class="main-image-container">
+    <img src="pics/apartment/a1.jpg" alt="Property" class="main-image">
   </div>
 </div>
