--- a/frontend/src/app/features/apartment/apartment-view/apartment-images/apartment-images.component.css
+++ b/frontend/src/app/features/apartment/apartment-view/apartment-images/apartment-images.component.css
@@ -4,7 +4,7 @@
 }
 
 .thumbnail-column {
-  margin-top: 10px;
+  /*margin-top: 10px;*/
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -13,8 +13,8 @@
 }
 
 .thumbnail {
-  width: 190px;
-  height: 130px;
+  width: 160px;
+  height: 100px;
   object-fit: cover;
   border-radius: 5px;
   cursor: pointer;
@@ -30,7 +30,7 @@
 }
 
 .main-image {
-  width: 100%;
-  height: auto;
+  width: 70vh;
+  height: 43vh;
   border-radius: 5px;
 }
