--- a/frontend/src/app/features/apartment/apartment-view/host-info/host-info.component.css
+++ b/frontend/src/app/features/apartment/apartment-view/host-info/host-info.component.css
@@ -24,7 +24,7 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  background-color: #4CAF50;
+  background-color: #015E61;
   justify-content: center;
 }
 
