--- a/frontend/src/app/features/apartment/apartment-view/amenities-info/amenities-info.component.css
+++ b/frontend/src/app/features/apartment/apartment-view/amenities-info/amenities-info.component.css
@@ -1,7 +1,8 @@
 .amenities {
-  border: 1px solid #ccc;
   padding: 20px;
   border-radius: 8px;
+  background-color: rgba(30,30,30, 0.1);
+  backdrop-filter: blur(10px);
 }
 
 .amenities ul {
