--- a/frontend/src/app/features/apartment/apartment-view/detailed-view-base/detailed-view-base.component.css
+++ b/frontend/src/app/features/apartment/apartment-view/detailed-view-base/detailed-view-base.component.css
@@ -1,14 +1,7 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  overflow: hidden;
-}
-
 .container {
   display: flex;
   justify-content: space-between;
-  padding: 20px;
+  padding: 20px 35px 15px 35px;
   height: 90vh;
   box-sizing: border-box; /* Da padding ne utiče na ukupne dimenzije */
 }
@@ -20,17 +13,17 @@ html, body {
 
 .left-section {
   flex: 2.4;
-  padding-right: 20px;
+  /*padding-right: 1px;*/
   /*border: solid;*/
 }
 
 .middle-section {
-  flex: 0.8;
+  flex: 1;
   padding-right: 20px;
 }
 
 .right-section {
-  flex: 0.8;
+  flex: 1;
   display: flex; /* Koristimo Flexbox za vertikalno poravnanje elemenata */
   flex-direction: column; /* Elementi idu jedan ispod drugog */
   position: relative;
