--- a/frontend/src/app/features/apartment/apartment-view/detailed-view-base/detailed-view-base.component.css
+++ b/frontend/src/app/features/apartment/apartment-view/detailed-view-base/detailed-view-base.component.css
@@ -52,3 +52,24 @@
   border-radius: 8px;
   margin-top: auto; /* Gura div sa sadržajem na dno sekcije */
 }
+
+.reserve-button {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 12px 30px;
+  font-size: 16px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+}
+
+.reserve-button:hover {
+  background-color: #0056b3;
+}
+
