--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -44,5 +44,6 @@
 
 
 <div *ngIf="userRole === 'ADMINISTRATOR'" class="sidenav">
+  <a routerLink="/notifications">Notifications</a>
   <a href="#" (click)="logout()">Logout</a>
 </div>
