--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -16,6 +16,7 @@
   </div>
 
   <a routerLink="/guest-reservation" (click)="closeMenu()">Reservation</a>
+  <a routerLink="/notifications">Notifications</a>
   <a href="#" (click)="logout()">Logout</a>
 </div>
 
@@ -39,6 +40,7 @@
   </div>
 
   <a routerLink="/profile" (click)="closeMenu()">Reservation</a>
+  <a routerLink="/notifications">Notifications</a>
   <a href="#" (click)="logout()">Logout</a>
 </div>
 
