--- a/frontend/src/app/shared/notifications/notifications.component.html
+++ b/frontend/src/app/shared/notifications/notifications.component.html
@@ -2,8 +2,24 @@
   <div *ngFor="let notification of notifications" class="notification">
     <p [class.read]="notification.read">{{ notification.message }}</p>
     <small>{{ notification.timestamp | date: 'short' }}</small>
-    <button class="btn-primary" (click)="markAsRead(notification.id)" *ngIf="!notification.read">
-      Mark as Read
-    </button>
+
+    <div *ngIf="userRole === 'ADMINISTRATOR'; else userButtons">
+<!--      <button (click)="approveApartment()">-->
+      <button>
+        Approve Apartment
+      </button>
+
+      <button (click)="markAsRead(notification.id)" *ngIf="!notification.read">
+        Mark as Read
+      </button>
+    </div>
+
+    <ng-template #userButtons>
+      <div>
+        <button class="btn-primary" (click)="markAsRead(notification.id)" *ngIf="!notification.read">
+          Mark as Read
+        </button>
+      </div>
+    </ng-template>
   </div>
 </div>
