--- a/frontend/src/app/shared/notifications/notifications.component.css
+++ b/frontend/src/app/shared/notifications/notifications.component.css
@@ -1,22 +1,42 @@
-.notification-container {
+.notification-layout {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
+
+.notification-list {
+  flex: 1;
+  border-right: 1px solid #ccc;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding: 20px;
-  margin-top: 20px;
+  background-color: #f8f9fa;
+  overflow-y: auto; /* Omogućava skrolovanje */
+  height: 100%;
 }
 
 .notification {
-  padding: 15px;
+  width: 80%;
+  max-width: 300px;
+  padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  width: 50%;
-  text-align: center;
-  margin-top: 10px;
-  position: relative;
+  margin-bottom: 10px;
+  cursor: pointer;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.notification:hover {
+  background-color: #e9ecef;
+  transform: scale(1.05);
+}
+
+.notification.active {
+  background-color: #007bff;
+  color: white;
 }
 
 .notification p.read {
@@ -24,26 +44,18 @@
   color: grey;
 }
 
-button.btn-primary {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #007bff;
-  color: white;
-  border: none;
-  padding: 8px 16px;
-  font-size: 14px;
-  border-radius: 3px;
-  cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.2s ease;
+.notification-details {
+  flex: 3;
+  padding: 20px;
+  background-color: #fff;
+  overflow-y: auto;
+  transition: all 0.3s ease;
 }
 
-button.btn-primary:hover {
-  background-color: #0056b3;
-  transform: translateX(-50%) scale(1.05);
+.notification-details h3 {
+  margin-bottom: 10px;
 }
 
-button.btn-primary:focus {
-  outline: none;
+.notification-details p {
+  margin: 5px 0;
 }
